--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@
                     <p>・セットメニューはどちらかの施術をしたことがある場合初回価格適応外となります。</p>
                     <p>・初回価格は各種クーポンと併用可能。</p>
                     <p>・以下のクーポンは併用不可となります。<br>
-                    　LINEクーポン、2200円OFFクーポン、リピート割クーポン<br>
-                    　キレイパス等外部チケット</p>
+                    　- LINEクーポン<br>
+                    　- 2200円OFFクーポン<br>
+                    　- リピート割クーポン<br>
+                    　- キレイパス等外部チケット</p>
                 </div>
             </section>
 
@@ -817,11 +819,11 @@
                         <h3>遅刻について</h3>
                         <table class="policy-table">
                             <tr>
-                                <td>10分以内の遅刻</td>
+                                <td>10分以内の<br>遅刻</td>
                                 <td>施術可能<br>（時間短縮の場合あり）</td>
                             </tr>
                             <tr>
-                                <td>10分以上の遅刻</td>
+                                <td>10分以上の<br>遅刻</td>
                                 <td class="penalty">¥1,100のペナルティ料金</td>
                             </tr>
                         </table>
@@ -830,21 +832,16 @@
                     <div class="policy-box warning">
                         <h3>無断キャンセルのペナルティ</h3>
                         <ul class="penalty-list">
-                            <li>1回目：ネット予約機能の一時停止</li>
+                            <li>1回目：ネット予約機能の停止</li>
                             <li>2回目：今後の予約取得不可</li>
                         </ul>
-                        <p class="warning-text">※皆様に快適にご利用いただくため、ご協力をお願いいたします</p>
+                        <p class="warning-text">※皆様に快適にご利用いただくため<br>ご協力をお願いいたします</p>
                     </div>
                 </div>
             </section>
         </div>
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 美容皮膚科クリニック. All rights reserved.</p>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
