--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <td>¥7,700</td>
                             </tr>
                             <tr>
-                                <td rowspan="3">★ピコレーザー</td>
+                                <td rowspan="3">★ピコ<span class="mobile-br"></span>レーザー</td>
                                 <td>ピコトーニング</td>
                                 <td class="price-first">¥7,700</td>
                                 <td>¥14,300</td>
@@ -104,7 +104,7 @@
                                 <td>¥25,300</td>
                             </tr>
                             <tr>
-                                <td rowspan="7">★ケミカルピーリング</td>
+                                <td rowspan="7">★ケミカル<span class="mobile-br"></span>ピーリング</td>
                                 <td>マッサージピール 顔</td>
                                 <td class="price-first">¥6,600</td>
                                 <td>¥13,200</td>
@@ -125,22 +125,22 @@
                                 <td>¥6,600</td>
                             </tr>
                             <tr>
-                                <td>サリチル酸マクロゴール 顔＋首</td>
+                                <td>サリチル酸マクロゴール<br>顔＋首</td>
                                 <td class="price-first">¥4,500</td>
                                 <td>¥9,900</td>
                             </tr>
                             <tr>
-                                <td>サリチル酸マクロゴール＋ブルーレーザー 顔</td>
+                                <td>サリチル酸マクロゴール<br>＋ブルーレーザー 顔</td>
                                 <td class="price-first">¥6,600</td>
                                 <td>¥9,900</td>
                             </tr>
                             <tr>
-                                <td>サリチル酸マクロゴール＋ブルーレーザー 顔＋首</td>
+                                <td>サリチル酸マクロゴール<br>＋ブルーレーザー 顔＋首</td>
                                 <td class="price-first">¥9,900</td>
                                 <td>¥14,300</td>
                             </tr>
                             <tr>
-                                <td rowspan="2">★ブルーレーザー</td>
+                                <td rowspan="2">★ブルー<span class="mobile-br"></span>レーザー</td>
                                 <td>ブルーレーザー 顔</td>
                                 <td>-</td>
                                 <td>¥6,600</td>
@@ -188,12 +188,12 @@
                                 <td>¥35,200</td>
                             </tr>
                             <tr>
-                                <td>インモードVリフト（FORMA＋Fxセット）</td>
+                                <td>インモードVリフト<br>（FORMA＋Fxセット）</td>
                                 <td class="price-first">¥44,000</td>
                                 <td>¥57,200</td>
                             </tr>
                             <tr>
-                                <td rowspan="2">★インモード ルメッカ</td>
+                                <td rowspan="2">★インモード<span class="mobile-br"></span>ルメッカ</td>
                                 <td>ルメッカ</td>
                                 <td class="price-first">¥16,500</td>
                                 <td>¥24,200</td>
@@ -210,7 +210,7 @@
                                 <td>¥20,900</td>
                             </tr>
                             <tr>
-                                <td>ダーマペン レチノールアクティブ</td>
+                                <td>ダーマペン<br>レチノールアクティブ</td>
                                 <td class="price-first">¥15,400</td>
                                 <td>¥23,100</td>
                             </tr>
@@ -220,13 +220,13 @@
                                 <td>¥27,500</td>
                             </tr>
                             <tr>
-                                <td rowspan="3">ニードルRF</td>
-                                <td>ニードルRF 顔（リジュラン追加＋¥16,500）</td>
+                                <td rowspan="4">ニードルRF</td>
+                                <td>ニードルRF 顔</td>
                                 <td class="price-first">¥23,100</td>
                                 <td>¥35,200</td>
                             </tr>
                             <tr>
-                                <td>ニードルRF 顔 首（リジュラン追加＋¥16,500）</td>
+                                <td>ニードルRF 顔 首</td>
                                 <td class="price-first">¥34,300</td>
                                 <td>¥46,400</td>
                             </tr>
@@ -234,6 +234,11 @@
                                 <td>ニードルRF 顔 ニキビモード</td>
                                 <td class="price-first">¥24,200</td>
                                 <td>¥37,400</td>
+                            </tr>
+                            <tr>
+                                <td>リジュラン追加</td>
+                                <td>-</td>
+                                <td>¥16,500</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">痩身</td>
@@ -247,14 +252,14 @@
                                 <td>¥44,000</td>
                             </tr>
                             <tr>
-                                <td class="category-cell">セットメニュー</td>
+                                <td class="category-cell">セット<span class="mobile-br"></span>メニュー</td>
                                 <td>ハイドラ＋メソナJ</td>
                                 <td class="price-first">¥18,700</td>
                                 <td>¥25,300</td>
                             </tr>
                             <tr>
                                 <td class="category-cell">カウンセリング</td>
-                                <td>カウンセリング（VISIA撮影付き）</td>
+                                <td>カウンセリング<br>（VISIA撮影付き）</td>
                                 <td>-</td>
                                 <td>¥2,200</td>
                             </tr>
@@ -308,17 +313,17 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>ピコスポットシミ取り（1つにつき）10ミリまで</td>
+                                <td>ピコスポットシミ取り（1つにつき）<span class="mobile-br"></span>10ミリまで</td>
                                 <td>¥6,600</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>ピコスポットシミ取り（1つにつき）10ミリ以上</td>
+                                <td>ピコスポットシミ取り（1つにつき）<span class="mobile-br"></span>10ミリ以上</td>
                                 <td>¥8,800</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>ピコスポットシミ取りリペア（半年以内１回まで）１個</td>
+                                <td>ピコスポットシミ取りリペア<span class="mobile-br"></span>（半年以内１回まで）１個</td>
                                 <td>¥1,100</td>
                                 <td></td>
                             </tr>
@@ -388,7 +393,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>脂漏性角化症 全顔（CO2フラクショナルレーザー）</td>
+                                <td>脂漏性角化症 全顔<span class="mobile-br"></span>（CO2フラクショナルレーザー）</td>
                                 <td>¥33,000</td>
                                 <td></td>
                             </tr>
@@ -508,7 +513,7 @@
                 </div>
 
                 <div class="subsection">
-                    <h3 class="subsection-title">その他のボトックス（医師施術料込）</h3>
+                    <h3 class="subsection-title">その他のボトックス<span class="mobile-br"></span>（医師施術料込）</h3>
                     <div class="price-table-wrapper">
                         <table class="price-table">
                             <thead>
@@ -671,7 +676,7 @@
                 </div>
 
                 <div class="subsection">
-                    <h3 class="subsection-title">学生割引（女性）（中学生～大学生まで）</h3>
+                    <h3 class="subsection-title">学生割引（女性）<br>♦中学生～大学生まで♦</h3>
                     <div class="price-table-wrapper">
                         <table class="price-table">
                             <thead>
@@ -699,7 +704,7 @@
                 </div>
 
                 <div class="subsection">
-                    <h3 class="subsection-title">学生割引（男性）（中学生～大学生まで）</h3>
+                    <h3 class="subsection-title">学生割引（男性）<br>♦中学生～大学生まで♦</h3>
                     <div class="price-table-wrapper">
                         <table class="price-table">
                             <thead>
