--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                 </div>
                 <div class="info-box warning">
                     <h3>⚠️ 看護師施術の注意点 ⚠️</h3>
+                    <p><strong>【価格について】</strong></p>
                     <p>・初回価格は、同じカテゴリの施術には適応されません。（インモードを除く）</p>
                     <p>・セットメニューはどちらかの施術をしたことがある場合初回価格適応外となります。</p>
                     <p>・初回価格は各種クーポンと併用可能。</p>
@@ -281,6 +282,12 @@
                     　- 2200円OFFクーポン<br>
                     　- リピート割クーポン<br>
                     　- キレイパス等外部チケット</p>
+                    <br>
+                    <p><strong>【施術に関する注意事項】</strong></p>
+                    <p>・貴重品の管理はご自身でお願いします。</p>
+                    <p>・アクセサリー類はあらかじめ外しておいてください。</p>
+                    <p>・華美なメイクはお控えください。</p>
+                    <p>・お子様を連れての施術はお断りしております。</p>
                 </div>
             </section>
 
