--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="container">
             <h1 class="page-title">美容施術料金表</h1>
-            <p class="update-date">2025年8月1日更新</p>
+            <p class="update-date">2025年12月1日更新</p>
         </div>
     </header>
 
@@ -259,7 +259,7 @@
                             </tr>
                             <tr>
                                 <td class="category-cell">カウンセリング</td>
-                                <td>カウンセリング<br>（VISIA撮影付き）</td>
+                                <td>画像診断カウンセリング</td>
                                 <td>-</td>
                                 <td>¥2,200</td>
                             </tr>
@@ -836,7 +836,7 @@
                             </tr>
                             <tr>
                                 <td>10分以上の<br>遅刻</td>
-                                <td class="penalty">¥1,100のペナルティ料金</td>
+                                <td class="penalty">¥1,100のペナルティ料金<br>（当日施術できない場合あり）</td>
                             </tr>
                         </table>
                     </div>
@@ -845,7 +845,7 @@
                         <h3>無断キャンセルのペナルティ</h3>
                         <ul class="penalty-list">
                             <li>1回目：ネット予約機能の停止</li>
-                            <li>2回目：今後の予約取得不可</li>
+                            <li>2回目：今後OKの予約取得不可</li>
                         </ul>
                         <p class="warning-text">※皆様に快適にご利用いただくため<br>ご協力をお願いいたします</p>
                     </div>
